--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background-image: url("file:///C:/Users/super/Desktop/Tetris_web/russia.jpg");
+  background-image: url("russia.jpg");
   background-position: top top;
   background-size: cover cover;
   background-repeat: no-repeat;
