--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background-image: url("/russia.jpg");
+  background-image: url("https://github.com/Uspectacle/Tetris_web/blob/cff4c714666de5c4da638772c39eab298d79f0ce/russia.jpg");
   background-position: top top;
   background-size: cover cover;
   background-repeat: no-repeat;
